# ai-dev-toolkit

./: Dockerfile  Makefile  README.md  aitk  docker-compose.yml  pyproject.toml  workshop.md
ai_dev_toolkit/: __init__.py  command_list.py  main.py
ai_dev_toolkit/commands/: README.md  __init__.py  base.py  hello.py  terminal_builder.py
ai_dev_toolkit/utils/git/: branch.py  commit.py  conflict.py  history.py  release.py  review.py  stage_files.py  valid.py
ai_dev_toolkit/utils/misc/: download_docs.py  utils.py
conteudo_auxiliar/: ferramentas.md  prompt_engineer.md
docs/: ast-capabilities.md  context-awareness.md  conventinal-commits-and-semmantic-versioning.md  features.md  git-capabilities.md
docs/guidelines/: principles.md
tests/unit/: test_base_command.py  test_command_list.py  test_hello_command.py  test_main.py  test_terminal_builder.py
tests/unit/utils/git/: test_branch.py  test_commit.py  test_conflict.py  test_history.py  test_release.py  test_review.py  test_stage_files.py  test_valid.py
tests/unit/utils/git/diffs/: test_analyze_changes_detects_risky_patterns_and_file_types.diff  test_detect_breaking_changes_identifies_api_and_interface_changes.diff  test_generate_changelog_categorizes_commits_by_type.diff  test_impact_analysis_detects_scope_dependencies_and_api_changes.diff  test_invalid_hunk_header.diff  test_invalid_line_numbers.diff  test_invalid_line_prefix.diff  test_no_hunks.diff  test_valid_complex_diff.diff  test_valid_diff_start.diff
tests/unit/utils/misc/: test_utils.py
